# serde_tuple

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
examples/: simple.rs
serde_tuple_explicit_macros/: Cargo.toml
serde_tuple_explicit_macros/src/: lib.rs
serde_tuple_macros/: Cargo.toml
serde_tuple_macros/src/: lib.rs
src/: lib.rs
