[package]
authors = ["Jacob Brown <kardeiz@gmail.com>", "Krzysztof Saczuk <me@krzysztofsaczuk.pl>"]
edition = "2021"
name = "serde_tuple_macros"
version = "1.0.1"
description = "Internal proc-macro crate for serde_tuple"
license = "MIT"
repository = "https://github.com/kardeiz/serde_tuple"
readme = "../README.md"

[dependencies]
proc-macro2 = "1"
quote = "1"

[dependencies.syn]
features = ["full", "extra-traits"]
version = "1"

[lib]
proc-macro = true
